# i3-wwm

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
app/: main.cpp
app/input_service/: input_service.cpp  input_service.hpp
app/keybinds_service/: keybinds_service.cpp  keybinds_service.hpp
app/window_service/: window_service.cpp  window_service.hpp
app/workspace/: workspace.cpp  workspace.hpp
core/application/: application.cpp  application.hpp
core/event/: event.hpp
core/service/: service.hpp
core/winapi_utils/: winapi_events.cpp  winapi_screen.cpp  winapi_utils.hpp  winapi_window.cpp
